# rfs

./: Cargo.toml  Makefile  README.md  TODO.md
files/: 1.json  image.HEIC
meta_files/: 0050MSS-061-2008.rfs  1.json  README.md  image.HEIC.json  image.rfs
src/: lib.rs  main.rs  utils.rs  values.rs
src/domain/: config.rs  enums.rs  files.rs  fs.rs  mod.rs  models.rs
src/peer/: client.rs  connection.rs  enums.rs  file.rs  listener.rs  mod.rs  models.rs  state.rs  state_container.rs
src/ui/: app.rs  cilent.rs  connection.rs  enums.rs  format.rs  mod.rs
tests/: file_download_test.rs
