[package]
name = "distributed-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
futures = "0.3.30"
clap = { version = "4.5.9", features = ["derive"] }

[[bin]]
name = "serve_peer"
path = "src/bin/serve_peer.rs"
