[package]
name = "distributed-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
futures = "0.3.30"
clap = { version = "4.5.9", features = ["derive"] }
sha2 = "0.11.0-pre.3"
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["v4"] }
tokio-test = "0.4.4"
serde_cbor = "0.11.2"

[[bin]]
name = "serve_peer"
path = "src/bin/serve_peer.rs"

[[bin]]
name = "generate_meta_file"
path = "src/bin/generate_meta_file.rs"
